additional spacing fix

--- a/src/styles/_features.scss
+++ b/src/styles/_features.scss
@@ -25,6 +25,10 @@
       &:first-of-type {
         padding-top: 100px;
       }
+
+      &:last-of-type {
+        padding-bottom: 100px;
+      }
     }
 
     &--title {
