--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -10,7 +10,7 @@
 
   @media (max-width: 450px) {
     text-align: center;
-    margin: -32px auto 32px;
+    margin: -48px auto 32px;
   }
 
   .code-icon {
